--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,11 @@
   margin: 0;
   padding: 0;
 }
+.gilad{
+  color: bisque;
+  background-color: black;
+}
+.sinai{
+  color: black;
+  background-color: beige;
+}
